--- a/GFL Environmental Inc/GFL Environmental Financial_Analysis.ipynb
+++ b/GFL Environmental Inc/GFL Environmental Financial_Analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## GFL Environmental\n",
-    "GFL Environmental Inc. is a leading North American provider of diversified environmental solutions.GFL is the only major diversified environmental services company in North America offering services in solid waste management, liquid waste management and infrastructure development."
+    "GFL Environmental Inc. is a leading North American provider of diversified environmental solutions.GFL is the only major diversified environmental services company in North America offering services in solid waste management, liquid waste management and infrastructure development.GFL operates in all provinces in Canada, and currently employs more than 8,850 people. As of 2018, the approximate enterprise value of GFL is $5.12 billion."
    ]
   },
   {
